test/performance/vectorization/vectorizeOnly/nonIterableErrorMessage/vectorizeOnlyInvalidIterable.good
$CHPL_HOME/modules/standard/VectorizingIterator.chpl:130: In iterator 'vectorizeOnly':
$CHPL_HOME/modules/standard/VectorizingIterator.chpl:130: error: cannot iterate over values of type int(64)
  vectorizeOnlyInvalidIterable.chpl:4: called as vectorizeOnly(iterables(0): _any)
